--- a/TransactionsService/appsettings.json
+++ b/TransactionsService/appsettings.json
@@ -1,9 +1,22 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Authority": "https://your-keycloak-domain/realms/clear-budget",
+    "Audience": "clear-budget"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:4201",
+      "http://localhost:4202"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "RestartSchema": true
 }
