Update solution and project references for ReportingService
Removed UsersService and UsersService.Tests from the solution.
Added ReportingService and ReportingService.Tests with appropriate project configurations. Updated the project reference in ReportingService.Tests.csproj to point to ReportingService.

--- a/ReportingService.Tests/ReportingService.Tests.csproj
+++ b/ReportingService.Tests/ReportingService.Tests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UsersService\UsersService.csproj" />
+    <ProjectReference Include="..\ReportingService\ReportingService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
