Implement dashboard reporting and testing infrastructure
- Added `FakeTransactionsHandler` for simulating HTTP responses in tests.
- Updated `ReportingControllerTests` to validate dashboard functionality.
- Created `WebAppFactory` for configuring the test environment with authentication.
- Enabled implicit usings and nullable reference types in the project file.
- Implemented `ReportingServiceTests` for testing caching and refresh scenarios.
- Added `TestingAuthHandler` for simulating authentication in tests.
- Defined `ITransactionsClient` interface and implemented it in `TransactionsClient`.
- Created DTO classes for structured API responses.
- Updated `AuthorizedControllerBase` for user ID extraction from claims.
- Implemented `ReportingController` to manage dashboard requests.
- Enhanced `Program` class for JWT authentication, CORS, and Swagger setup.
- Updated `ReportingService` to include caching and report calculations.
- Modified `appsettings.json` for service URLs and JWT configuration.

--- a/ReportingService/appsettings.json
+++ b/ReportingService/appsettings.json
@@ -1,9 +1,21 @@
 {
+  "Services": {
+    "Transactions": "http://localhost:5001"
+  },
+  "Jwt": {
+    "Authority": "https://your-keycloak-domain/realms/clear-budget",
+    "Audience": "clear-budget"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:4201",
+      "http://localhost:4202"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
