Update APIGateway for .NET 8.0 and JWT integration
- Target .NET 8.0 in `APIGateway.csproj` with new package references for JWT authentication, Azure tools, Ocelot, and Swashbuckle.
- Add `APIGateway.http` for API host configuration and sample requests.
- Modify `Dockerfile` to use .NET 8.0 images for compatibility.
- Enhance `Program.cs` with JWT authentication setup and CORS policy.
- Update `launchSettings.json` with new profiles for the API gateway and services.
- Modify `appsettings.Development.json` and `appsettings.json` for JWT settings and CORS origins.
- Introduce `ocelot.json` for API routing and authentication options.
- Clean up `CategoriesController.cs` by removing commented-out documentation.
- Update solution file `Clear-Budget-API.sln` to include the new `APIGateway` project.
- Align `appsettings.Testing.json` with updated JWT authority and audience settings.

These changes improve the API's structure, security, and configuration for deployment and integration.

--- a/CategoriesService/appsettings.json
+++ b/CategoriesService/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Authority": "https://your-keycloak-domain/realms/clear-budget",
-    "Audience": "clear-budget"
+    "Authority": "http://localhost:8080/realms/adji",
+    "Audience": "account"
   },
   "Cors": {
     "AllowedOrigins": [
