--- a/APIGateway/Properties/launchSettings.json
+++ b/APIGateway/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5120"
+      "applicationUrl": "http://localhost:5039"
     },
     "https": {
       "commandName": "Project",
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7124;http://localhost:5120"
+      "applicationUrl": "https://localhost:7106;http://localhost:5039"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -39,11 +39,11 @@
       "publishAllPorts": true,
       "useSSL": true
     },
-    "ReportingService": {
+    "ApiGateway": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5003",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -54,8 +54,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:4157",
-      "sslPort": 44383
+      "applicationUrl": "http://localhost:6874",
+      "sslPort": 44305
     }
   }
 }
