--- a/APIGateway/appsettings.json
+++ b/APIGateway/appsettings.json
@@ -1,16 +1,10 @@
 {
-  "Services": {
-    "Transactions": "http://localhost:5001"
-  },
   "Jwt": {
     "Authority": "http://localhost:8080/realms/adji",
     "Audience": "account"
   },
   "Cors": {
-    "AllowedOrigins": [
-      "http://localhost:4201",
-      "http://localhost:4202"
-    ]
+    "AllowedOrigins": [ "http://localhost:4200", "http://localhost" ]
   },
   "Logging": {
     "LogLevel": {
