--- a/CategoriesService/Properties/launchSettings.json
+++ b/CategoriesService/Properties/launchSettings.json
@@ -38,6 +38,15 @@
       },
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "CategoriesService": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5001",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
