--- a/TransactionsService/appsettings.json
+++ b/TransactionsService/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Authority": "https://your-keycloak-domain/realms/clear-budget",
-    "Audience": "clear-budget"
+    "Authority": "http://localhost:8080/realms/adji",
+    "Audience": "account"
   },
   "Cors": {
     "AllowedOrigins": [
