Enhance transaction retrieval and add category management
Updated ITransactionsClient to support cancellation and improved TransactionsClient to handle user-specific requests. Implemented Polly for resilience in transaction retrieval. Added new category management interfaces and classes, and registered them in the dependency injection container. Updated project files to include necessary Polly packages and modified appsettings for service configuration.

--- a/TransactionsService/appsettings.json
+++ b/TransactionsService/appsettings.json
@@ -12,6 +12,9 @@
       "http://localhost:4202"
     ]
   },
+  "Services": {
+    "Categories": "http://localhost:5002"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
