Enhance messaging architecture with RabbitMQ integration
- Updated `APIGateway.csproj` to include Serilog for improved logging.
- Refactored `Program.cs` to remove `Microsoft.Extensions.Logging` and add messaging namespaces.
- Added `Testcontainers.RabbitMq` reference in `CategoriesService.Tests.csproj` for RabbitMQ testing.
- Introduced messaging dependencies in `CategoryServiceTests.cs` and removed `CategoriesControllerTests.cs`.
- Updated `WebAppFactory.cs` for RabbitMQ configuration in integration tests.
- Added references to `RabbitMQ.Client` and the new `Messaging` project in `CategoriesService.csproj`.
- Configured RabbitMQ options and connection factory in `Program.cs`.
- Modified `CategoryService.cs` to support event publishing for category operations.
- Updated `appsettings.json` and `appsettings.Testing.json` with RabbitMQ settings.
- Introduced new classes/interfaces for event bus functionality.
- Added `IntegrationTests.cs` for testing RabbitMQ interactions.
- Created `RabbitMqContainerFixture.cs` for RabbitMQ container management in tests.
- Defined `CategoryEvent` class for event structure related to categories.
- Implemented `CategoryEventConsumer` and `CategorySubscriptionService` for event handling.
- Added tests for caching and event consumption in `CategoryCacheTests.cs` and `CategoryEventConsumerTests.cs`.
- Disabled test parallelization in `xunit.runner.json` files across multiple projects.

--- a/TransactionsService/appsettings.json
+++ b/TransactionsService/appsettings.json
@@ -21,5 +21,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "User": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "ExchangeNames": {
+      "Category": "category.exchange"
+    },
+    "QueueNames": {
+      "Category": "transactions.category.queue"
+    }
+  },
+
   "RestartSchema": true
 }
