--- a/CategoriesService/appsettings.json
+++ b/CategoriesService/appsettings.json
@@ -18,5 +18,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "User": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "ExchangeNames": {
+      "Category": "category.exchange"
+    }
+  },
   "RestartSchema": true
 }
