--- a/ReportingService/ReportingService.csproj
+++ b/ReportingService/ReportingService.csproj
@@ -22,6 +22,9 @@
     <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
     <PackageReference Include="Polly.Core" Version="8.5.2" />
     <PackageReference Include="Polly.Extensions" Version="8.5.2" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
   </ItemGroup>
 
