Add category retrieval and authentication enhancements
- Introduced `GetAllCategories` endpoint in `CategoriesController` for fetching all categories with role-based authorization.
- Updated `ICategoryRepository` and `CategoryRepository` to support fetching all categories.
- Added `GetAllCategories` method in `ICategoryService` and implemented it in `CategoryService`.
- Modified `appsettings.json` to update RabbitMQ credentials and added new authentication settings.
- Created `IAuthTokenClient` interface and `AuthTokenClient` class for access token retrieval.
- Enhanced `CategoriesClient` to support access token functionality.
- Configured dependency injection for RabbitMQ and HTTP clients in `Program.cs`.
- Added `ServiceAuthHandler` to manage authorization headers for outgoing requests.

--- a/CategoriesService/appsettings.json
+++ b/CategoriesService/appsettings.json
@@ -20,8 +20,8 @@
   },
   "RabbitMQ": {
     "Host": "localhost",
-    "User": "guest",
-    "Password": "guest",
+    "User": "testuser",
+    "Password": "testpassword",
     "VirtualHost": "/",
     "ExchangeNames": {
       "Category": "category.exchange"
