--- a/TransactionsService/appsettings.json
+++ b/TransactionsService/appsettings.json
@@ -6,6 +6,11 @@
     "Authority": "http://localhost:8080/realms/adji",
     "Audience": "account"
   },
+  "Auth": {
+    "ClientId": "clear-budget",
+    "ClientSecret": "UbwCXJ0DeuuD9EHMCar81aJqOGh0lv73",
+    "TokenUrl": "http://localhost:8080/realms/adji/protocol/openid-connect/token"
+  },
   "Cors": {
     "AllowedOrigins": [
       "http://localhost:4201",
@@ -13,7 +18,7 @@
     ]
   },
   "Services": {
-    "Categories": "http://localhost:5002"
+    "Categories": "http://localhost:5001"
   },
   "Logging": {
     "LogLevel": {
@@ -23,8 +28,8 @@
   },
   "RabbitMQ": {
     "Host": "localhost",
-    "User": "guest",
-    "Password": "guest",
+    "User": "testuser",
+    "Password": "testpassword",
     "VirtualHost": "/",
     "ExchangeNames": {
       "Category": "category.exchange"
