--- a/Shared.Messaging.Tests/Shared.Messaging.Tests.csproj
+++ b/Shared.Messaging.Tests/Shared.Messaging.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Messaging\Messaging.csproj" />
+    <ProjectReference Include="..\Shared.Messaging\Shared.Messaging.csproj" />
   </ItemGroup>
 
   <ItemGroup>
