Integrate shared logging functionality across services
- Added references to `Shared.Logging` in `CategoriesService` and `ReportingService`.
- Updated `Program.cs` to use `UseSharedSerilog` for logging configuration.
- Introduced a new `Serilog` section in `appsettings.json` for logging settings.
- Removed the empty `Class1` class from `Shared.Logging`.
- Implemented `SerilogExtensions` for shared Serilog configuration.
- Updated `Shared.Logging.csproj` with necessary Serilog packages.
- Added logging configuration in `appsettings.json` for `TransactionsService`.

--- a/ReportingService/ReportingService.csproj
+++ b/ReportingService/ReportingService.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared.Auth\Shared.Auth.csproj" />
+    <ProjectReference Include="..\Shared.Logging\Shared.Logging.csproj" />
   </ItemGroup>
 
 </Project>
