--- a/CategoriesService/appsettings.json
+++ b/CategoriesService/appsettings.json
@@ -28,5 +28,30 @@
       "Category": "category.exchange"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 10
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "CategoriesService"
+    }
+  },
+
   "RestartSchema": true
 }
