Add shared middleware and error handling functionality
Updated project references in CategoriesService, ReportingService, and TransactionsService to include Shared.Middleware. Added error handling middleware and logging capabilities to the application. Introduced extension methods for middleware integration and removed unused Class1.cs file. Updated Shared.Middleware project with necessary package references.

--- a/CategoriesService/CategoriesService.csproj
+++ b/CategoriesService/CategoriesService.csproj
@@ -32,6 +32,7 @@
     <ProjectReference Include="..\Shared.Auth\Shared.Auth.csproj" />
     <ProjectReference Include="..\Shared.Logging\Shared.Logging.csproj" />
     <ProjectReference Include="..\Shared.Messaging\Shared.Messaging.csproj" />
+    <ProjectReference Include="..\Shared.Middleware\Shared.Middleware.csproj" />
   </ItemGroup>
 
 </Project>
