Refactor testing infrastructure and add shared utilities
- Updated `CategoriesService.Tests.csproj` to reference `Shared.Testing`.
- Modified `CategoriesWebAppFactory` to inherit from `CustomWebApplicationFactory`.
- Created `CategoriesDbFixture` and `TransactionsDbFixture` for PostgreSQL integration tests.
- Refactored `PostgreSqlContainerFixture` for reusability with different `DbContext` types.
- Moved `RabbitMqContainerFixture` to `Shared.Testing.Containers` and improved its implementation.
- Introduced `CustomWebApplicationFactory` for customizable web application factories.
- Refactored `TestingAuthHandler` and `TransactionsWebAppFactory` for better organization.
- Created `Shared.Testing.csproj` to manage shared testing dependencies.
- Updated solution file to include the new `Shared.Testing` project.
- Enhanced `ReportingWebAppFactory` and `ReportingControllerTests` for consistency.
- Added `RabbitTestSettings` for cleaner RabbitMQ configuration.

--- a/CategoriesService.Tests/CategoriesService.Tests.csproj
+++ b/CategoriesService.Tests/CategoriesService.Tests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CategoriesService\CategoriesService.csproj" />
+    <ProjectReference Include="..\Shared.Testing\Shared.Testing.csproj" />
   </ItemGroup>
 
 </Project>
