--- a/ReportingService.Tests/ReportingService.Tests.csproj
+++ b/ReportingService.Tests/ReportingService.Tests.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ReportingService\ReportingService.csproj" />
+    <ProjectReference Include="..\Shared.Testing\Shared.Testing.csproj" />
   </ItemGroup>
 
   <ItemGroup>
