--- a/TransactionsService.Tests/TransactionsService.Tests.csproj
+++ b/TransactionsService.Tests/TransactionsService.Tests.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Shared.Testing\Shared.Testing.csproj" />
     <ProjectReference Include="..\TransactionsService\TransactionsService.csproj" />
   </ItemGroup>
 
