Feat refactor and modularity
* Refactor Messaging to Shared.Messaging namespace

This commit refactors the codebase to replace all references to the `Messaging` namespace with the new `Shared.Messaging` namespace. This change affects multiple files, including service implementations, event bus consumers, and configuration classes, to centralize messaging functionality under a shared library for improved organization and reusability.

Key updates include:
- Updated imports in `CategoryServiceTests.cs`, `Program.cs`, and `CategoryService.cs`.
- Modified `CategoriesService.csproj` to reference the new `Shared.Messaging` project.
- Adjusted the solution file `Clear-Budget-API.sln` to include new projects for `Shared.Logging`, `Shared.Middleware`, and `Shared.Messaging`.
- Added new classes in `Shared.Logging` and `Shared.Middleware`.
- Ensured consistent usage of the new namespace across various files, enhancing modularity and maintainability.

* Refactor authentication to use Shared.Auth project

- Updated `CategoriesService.csproj` and `ReportingService.csproj` to reference `Shared.Auth` and `Shared.Messaging`.
- Replaced `System.Security.Claims` with `Shared.Auth.Extensions` in `Program.cs`.
- Refactored JWT authentication setup to use `AddStandardJwtAuthentication`.
- Added `ClientId` to `Jwt` section in `appsettings.json`.
- Included `Shared.Auth` project in the solution file.
- Created `JwtAuthenticationExtensions.cs` for JWT logic in `Shared.Auth`.
- Updated `TransactionsService.csproj` to reference `Shared.Auth` and modified its `appsettings.json` for authentication credentials.

* Integrate shared logging functionality across services

- Added references to `Shared.Logging` in `CategoriesService` and `ReportingService`.
- Updated `Program.cs` to use `UseSharedSerilog` for logging configuration.
- Introduced a new `Serilog` section in `appsettings.json` for logging settings.
- Removed the empty `Class1` class from `Shared.Logging`.
- Implemented `SerilogExtensio

--- a/ReportingService/appsettings.json
+++ b/ReportingService/appsettings.json
@@ -4,7 +4,8 @@
   },
   "Jwt": {
     "Authority": "http://localhost:8080/realms/adji",
-    "Audience": "account"
+    "Audience": "account",
+    "ClientId": "clear-budget"
   },
   "Cors": {
     "AllowedOrigins": [
@@ -17,5 +18,30 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 10
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "CategoriesService"
+    }
   }
+
 }
