--- a/ReportingService/ReportingService.csproj
+++ b/ReportingService/ReportingService.csproj
@@ -32,4 +32,10 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared.Auth\Shared.Auth.csproj" />
+    <ProjectReference Include="..\Shared.Logging\Shared.Logging.csproj" />
+    <ProjectReference Include="..\Shared.Middleware\Shared.Middleware.csproj" />
+  </ItemGroup>
+
 </Project>
