Update Docker configurations and Terraform integration
- Updated `.gitignore` to include new Terraform and RabbitMQ paths.
- Modified `docker-compose.full.yml` to update PostgreSQL and Keycloak image versions, and added a new Terraform service.
- Removed `docker-compose.terraform.yml` and integrated its contents into `docker-compose.full.yml`.
- Updated `docker-compose.yml` to replace old services with new configurations including Terraform.
- Updated Terraform runner `Dockerfile` to copy and set the new entrypoint script as executable.
- Modified `entrypoint.sh` to wait for Terraform provisioning before starting services.
- Updated `main.tf` to change Keycloak provider version and add RabbitMQ resources.
- Added new RabbitMQ configuration variables in `variables.tf`.
- Updated `terraform.tfvars` for new Keycloak realm and RabbitMQ settings.
- Updated `APIGateway.csproj` to include additional Ocelot configuration files.
- Changed Keycloak realm from "adji" to "customer" in `appsettings.Docker.json` and updated token URL.
- Added `ocelot.Docker.json` for API gateway routing.
- Updated Dockerfiles for `CategoriesService`, `TransactionsService`, and `ReportingService` to include new entrypoint scripts and set DLL names.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/infra/keycloak/.terraform/providers/registry.terraform.io/mrparkers/keycloak
+/infra/rabbitmq/.terraform/providers/registry.terraform.io/cyrilgdn/rabbitmq/1.8.0
