--- a/src/APIGateway/appsettings.Docker.json
+++ b/src/APIGateway/appsettings.Docker.json
@@ -1,6 +1,6 @@
 {
   "Jwt": {
-    "Authority": "http://keycloak:8080/realms/adji",
+    "Authority": "http://keycloak:8080/realms/customer",
     "Audience": "account",
     "ClientId": "clear-budget"
   },
