--- a/src/CategoriesService/appsettings.Docker.json
+++ b/src/CategoriesService/appsettings.Docker.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Host=postgres;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Authority": "http://keycloak:8080/realms/adji",
+    "Authority": "http://keycloak:8080/realms/customer",
     "Audience": "account",
     "ClientId": "clear-budget"
   },
