--- a/src/ReportingService/appsettings.Docker.json
+++ b/src/ReportingService/appsettings.Docker.json
@@ -3,7 +3,7 @@
     "Transactions": "http://transactions-service"
   },
   "Jwt": {
-    "Authority": "http://keycloak:8080/realms/adji",
+    "Authority": "http://keycloak:8080/realms/customer",
     "Audience": "account",
     "ClientId": "clear-budget"
   },
