--- a/src/TransactionsService/appsettings.Docker.json
+++ b/src/TransactionsService/appsettings.Docker.json
@@ -3,14 +3,14 @@
     "DefaultConnection": "Host=postgres;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Authority": "http://keycloak:8080/realms/adji",
+    "Authority": "http://keycloak:8080/realms/customer",
     "Audience": "account",
     "ClientId": "clear-budget"
   },
   "Auth": {
     "ClientId": "clear-budget",
     "ClientSecret": "UbwCXJ0DeuuD9EHMCar81aJqOGh0lv73",
-    "TokenUrl": "http://keycloak:8080/realms/adji/protocol/openid-connect/token"
+    "TokenUrl": "http://keycloak:8080/realms/customer/protocol/openid-connect/token"
   },
   "Cors": {
     "AllowedOrigins": [ "*" ]
