--- a/src/APIGateway/Dockerfile
+++ b/src/APIGateway/Dockerfile
@@ -1,30 +1,36 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Base image for runtime
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
-
-# This stage is used to build the service project
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["APIGateway/APIGateway.csproj", "APIGateway/"]
-RUN dotnet restore "./APIGateway/APIGateway.csproj"
-COPY . .
+
+# Copy only the project files required for restore
+COPY ["src/APIGateway/APIGateway.csproj", "APIGateway/"]
+COPY ["src/Shared.Auth/Shared.Auth.csproj", "Shared.Auth/"]
+
+# Restore dependencies
+RUN dotnet restore "APIGateway/APIGateway.csproj"
+
+# Copy the full source code
+COPY src/ .
+
+# Build the service
 WORKDIR "/src/APIGateway"
-RUN dotnet build "./APIGateway.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "APIGateway.csproj" -c Release -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Publish the service
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./APIGateway.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "APIGateway.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Final runtime image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+# Optional: if ocelot.Docker.json is not included via .csproj, add this:
+COPY src/APIGateway/ocelot.Docker.json .
+
 ENTRYPOINT ["dotnet", "APIGateway.dll"]
