--- a/src/ReportingService/Dockerfile
+++ b/src/ReportingService/Dockerfile
@@ -1,30 +1,44 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Base image for runtime
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
-
-# This stage is used to build the service project
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["UsersService/UsersService.csproj", "UsersService/"]
-RUN dotnet restore "./UsersService/UsersService.csproj"
-COPY . .
-WORKDIR "/src/UsersService"
-RUN dotnet build "./UsersService.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Copy only the project files required for restore
+COPY ["src/ReportingService/ReportingService.csproj", "ReportingService/"]
+COPY ["src/Shared.Auth/Shared.Auth.csproj", "Shared.Auth/"]
+COPY ["src/Shared.Logging/Shared.Logging.csproj", "Shared.Logging/"]
+COPY ["src/Shared.Middleware/Shared.Middleware.csproj", "Shared.Middleware/"]
+
+# Restore dependencies
+RUN dotnet restore "ReportingService/ReportingService.csproj"
+
+# Copy the full source code
+COPY src/ .
+
+# Build the service
+WORKDIR "/src/ReportingService"
+RUN dotnet build "ReportingService.csproj" -c Release -o /app/build
+
+# Publish the service
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./UsersService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "ReportingService.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Final runtime image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "UsersService.dll"]
+
+# Add entrypoint and make it executable
+COPY src/CategoriesService/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Set which DLL to execute
+ENV DLL_NAME=CategoriesService.dll
+
+# Entrypoint waits for Terraform before launching
+EXPOSE 80
+ENTRYPOINT ["/entrypoint.sh"]
