Enhance logging and Keycloak integration
- Updated `docker-compose.full.yml` to include `extra_hosts` for host communication.
- Added Keycloak provider configuration and resources in `main.tf`.
- Changed `keycloak_realm` in `terraform.tfvars` from "adji" to "customer".
- Integrated `Shared.Logging` into the API Gateway via `APIGateway.csproj` and `Dockerfile`.
- Set up Serilog logging in `Program.cs` and updated configuration files for JWT and logging.
- Modified `ocelot.Docker.json` to change downstream service ports to 80.
- Updated `entrypoint.sh` to securely extract client secrets.
- Refactored `JwtAuthenticationExtensions.cs` for improved JWT handling and logging.
- Enhanced logging in `ServiceAuthHandler.cs` and `AuthTokenClient.cs`.
- Updated `Shared.Auth.csproj` to include Serilog and added RabbitMQ configurations in appsettings.

--- a/docker-compose.full.yml
+++ b/docker-compose.full.yml
@@ -81,6 +81,8 @@ services:
       - rabbitmq
     networks:
       - clearbudget-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   transactions-service:
     build:
@@ -98,6 +100,8 @@ services:
       - rabbitmq
     networks:
       - clearbudget-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   reporting-service:
     build:
@@ -114,6 +118,8 @@ services:
       - transactions-service
     networks:
       - clearbudget-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   gateway:
     build:
@@ -133,6 +139,8 @@ services:
       - reporting-service
     networks:
       - clearbudget-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   postgres-data:
