--- a/src/ReportingService/appsettings.Docker.json
+++ b/src/ReportingService/appsettings.Docker.json
@@ -3,9 +3,14 @@
     "Transactions": "http://transactions-service"
   },
   "Jwt": {
-    "Authority": "http://keycloak:8080/realms/customer",
-    "Audience": "account",
-    "ClientId": "clear-budget"
+    "Authority": "http://host.docker.internal:8080/realms/customer",
+    "Audience": ["clear-budget"],
+    "ClientId": "clear-budget",
+    "Issuers": [
+    "http://keycloak:8080/realms/customer",
+    "http://localhost:8080/realms/customer",
+    "http://host.docker.internal:8080/realms/customer"
+    ]
   },
   "Cors": {
     "AllowedOrigins": [ "*" ]
