--- a/src/ReportingService/appsettings.json
+++ b/src/ReportingService/appsettings.json
@@ -3,9 +3,12 @@
     "Transactions": "http://localhost:5001"
   },
   "Jwt": {
-    "Authority": "http://localhost:8080/realms/adji",
-    "Audience": "account",
-    "ClientId": "clear-budget"
+    "Authority": "http://localhost:8080/realms/customer",
+    "Audience": ["clear-budget"],
+    "ClientId": "clear-budget",
+    "Issuers": [
+      "http://localhost:8080/realms/customer"
+    ]
   },
   "Cors": {
     "AllowedOrigins": [
