--- a/src/TransactionsService/appsettings.Docker.json
+++ b/src/TransactionsService/appsettings.Docker.json
@@ -3,13 +3,17 @@
     "DefaultConnection": "Host=postgres;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Authority": "http://keycloak:8080/realms/customer",
-    "Audience": "account",
-    "ClientId": "clear-budget"
+    "Authority": "http://host.docker.internal:8080/realms/customer",
+    "Audience": ["clear-budget"],
+    "ClientId": "clear-budget",
+    "Issuers": [
+    "http://keycloak:8080/realms/customer",
+    "http://localhost:8080/realms/customer",
+    "http://host.docker.internal:8080/realms/customer"
+    ]
   },
   "Auth": {
     "ClientId": "clear-budget",
-    "ClientSecret": "UbwCXJ0DeuuD9EHMCar81aJqOGh0lv73",
     "TokenUrl": "http://keycloak:8080/realms/customer/protocol/openid-connect/token"
   },
   "Cors": {
