--- a/src/TransactionsService/appsettings.json
+++ b/src/TransactionsService/appsettings.json
@@ -3,14 +3,17 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Authority": "http://localhost:8080/realms/adji",
-    "Audience": "account",
-    "ClientId": "clear-budget"
+    "Authority": "http://localhost:8080/realms/customer",
+    "Audience": ["clear-budget"],
+    "ClientId": "clear-budget",
+    "Issuers": [
+    "http://localhost:8080/realms/customer"
+    ]
   },
   "Auth": {
     "ClientId": "clear-budget",
     "ClientSecret": "UbwCXJ0DeuuD9EHMCar81aJqOGh0lv73",
-    "TokenUrl": "http://localhost:8080/realms/adji/protocol/openid-connect/token"
+    "TokenUrl": "http://localhost:8080/realms/customer/protocol/openid-connect/token"
   },
   "Cors": {
     "AllowedOrigins": [
@@ -63,7 +66,5 @@
       "Application": "CategoriesService"
     }
   },
-
-
-  "RestartSchema": true
+  "RestartSchema": false
 }
