--- a/src/APIGateway/appsettings.Development.json
+++ b/src/APIGateway/appsettings.Development.json
@@ -1,8 +1,42 @@
 {
+  "Jwt": {
+    "Authority": "http://localhost:8080/realms/customer",
+    "Audience": ["clear-budget"],
+    "Issuers": [
+      "http://localhost:8080/realms/customer"
+    ]
+  },
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:4200", "http://localhost" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/gateway-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 10
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "Gateway"
     }
   }
 }
