--- a/src/APIGateway/appsettings.json
+++ b/src/APIGateway/appsettings.json
@@ -1,7 +1,10 @@
 {
   "Jwt": {
-    "Authority": "http://localhost:8080/realms/adji",
-    "Audience": "account"
+    "Authority": "http://localhost:8080/realms/customer",
+    "Audience": ["clear-budget"],
+    "Issuers": [
+      "http://localhost:8080/realms/customer"
+    ]
   },
   "Cors": {
     "AllowedOrigins": [ "http://localhost:4200", "http://localhost" ]
@@ -10,6 +13,30 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/gateway-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 10
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "Gateway"
     }
   }
 }
