--- a/src/CategoriesService/appsettings.Docker.json
+++ b/src/CategoriesService/appsettings.Docker.json
@@ -3,9 +3,14 @@
     "DefaultConnection": "Host=postgres;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Authority": "http://keycloak:8080/realms/customer",
-    "Audience": "account",
-    "ClientId": "clear-budget"
+    "Authority": "http://host.docker.internal:8080/realms/customer",
+    "Audience": ["clear-budget"],
+    "ClientId": "clear-budget",
+    "Issuers": [
+    "http://keycloak:8080/realms/customer",
+    "http://localhost:8080/realms/customer",
+    "http://host.docker.internal:8080/realms/customer"
+    ]
   },
   "Cors": {
     "AllowedOrigins": [ "*" ]
@@ -49,5 +54,5 @@
       "Application": "CategoriesService"
     }
   },
-  "RestartSchema": true
+  "RestartSchema": false
 }
