--- a/src/CategoriesService/appsettings.json
+++ b/src/CategoriesService/appsettings.json
@@ -3,9 +3,12 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=clearbudget;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Authority": "http://localhost:8080/realms/adji",
-    "Audience": "account",
-    "ClientId": "clear-budget"
+    "Authority": "http://localhost:8080/realms/customer",
+    "Audience": ["clear-budget"],
+    "ClientId": "clear-budget",
+    "Issuers": [
+      "http://localhost:8080/realms/customer"
+    ]
   },
   "Cors": {
     "AllowedOrigins": [
@@ -53,5 +56,5 @@
     }
   },
 
-  "RestartSchema": true
+  "RestartSchema": false
 }
