Update .gitignore for Terraform files
Added patterns to ignore Terraform-related files such as
*.tfstate, *.tfstate.backup, .terraform.lock.hcl,
.terraform/, crash.log, *.tfplan, and *.tfapply.
This prevents unnecessary files from being tracked by Git.

--- a/.gitignore
+++ b/.gitignore
@@ -361,5 +361,12 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/infra/keycloak/.terraform/providers/registry.terraform.io/mrparkers/keycloak
-/infra/rabbitmq/.terraform/providers/registry.terraform.io/cyrilgdn/rabbitmq/1.8.0
+
+
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
+.terraform/
+crash.log
+*.tfplan
+*.tfapply
