Refactor category naming conventions and migrations
- Changed table name for `Category` entity from "Categories" to "categories".
- Updated column names for `Category` properties to lowercase.
- Renamed migration class to reflect new timestamp.
- Modified migration file to change table and primary key constraint names.
- Updated `CategoriesDbContextModelSnapshot.cs` for entity type name changes.

--- a/src/CategoriesService/CategoriesService.csproj
+++ b/src/CategoriesService/CategoriesService.csproj
@@ -35,4 +35,8 @@
     <ProjectReference Include="..\Shared.Middleware\Shared.Middleware.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Migrations\" />
+  </ItemGroup>
+
 </Project>
