--- a/src/TransactionsService/TransactionsService.csproj
+++ b/src/TransactionsService/TransactionsService.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\Shared.Middleware\Shared.Middleware.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Migrations\" />
+  </ItemGroup>
+
 </Project>
