Update authentication and transaction retrieval logic
- Changed API endpoint in `GetUserTransactionsAsync` to `/api/transactions/by-user/{userId}`.
- Added `ServiceAuthHandler` for authentication in `Program.cs`.
- Introduced new `Auth` configuration settings in `appsettings.Development.json` and `appsettings.json`.
- Created `IAuthTokenClient` interface and implemented `AuthTokenClient` for access token retrieval.
- Added `ServiceAuthHandler` to manage authorization headers in HTTP requests.
- Implemented a new endpoint in `TransactionsController` for fetching transactions by user ID with role-based authorization.

--- a/src/ReportingService/appsettings.Development.json
+++ b/src/ReportingService/appsettings.Development.json
@@ -1,14 +1,19 @@
 {
   "Services": {
-    "Transactions": "http://localhost:5001"
+    "Transactions": "http://localhost:5002"
   },
   "Jwt": {
     "Authority": "http://localhost:8080/realms/customer",
-    "Audience": ["clear-budget"],
+    "Audience": [ "clear-budget" ],
     "ClientId": "clear-budget",
     "Issuers": [
       "http://localhost:8080/realms/customer"
     ]
+  },
+  "Auth": {
+    "ClientId": "clear-budget",
+    "ClientSecret": "FffKqPOcupW47zGLmIX3V1lZiffNHt3J",
+    "TokenUrl": "http://localhost:8080/realms/customer/protocol/openid-connect/token"
   },
   "Cors": {
     "AllowedOrigins": [
