--- a/src/ReportingService/appsettings.Docker.json
+++ b/src/ReportingService/appsettings.Docker.json
@@ -4,13 +4,17 @@
   },
   "Jwt": {
     "Authority": "http://host.docker.internal:8080/realms/customer",
-    "Audience": ["clear-budget"],
+    "Audience": [ "clear-budget" ],
     "ClientId": "clear-budget",
     "Issuers": [
-    "http://keycloak:8080/realms/customer",
-    "http://localhost:8080/realms/customer",
-    "http://host.docker.internal:8080/realms/customer"
+      "http://keycloak:8080/realms/customer",
+      "http://localhost:8080/realms/customer",
+      "http://host.docker.internal:8080/realms/customer"
     ]
+  },
+  "Auth": {
+    "ClientId": "clear-budget",
+    "TokenUrl": "http://localhost:8080/realms/customer/protocol/openid-connect/token"
   },
   "Cors": {
     "AllowedOrigins": [ "*" ]
