--- a/src/ReportingService/appsettings.json
+++ b/src/ReportingService/appsettings.json
@@ -1,14 +1,19 @@
 {
   "Services": {
-    "Transactions": "http://localhost:5001"
+    "Transactions": "http://localhost:5002"
   },
   "Jwt": {
     "Authority": "http://localhost:8080/realms/customer",
-    "Audience": ["clear-budget"],
+    "Audience": [ "clear-budget" ],
     "ClientId": "clear-budget",
     "Issuers": [
       "http://localhost:8080/realms/customer"
     ]
+  },
+  "Auth": {
+    "ClientId": "clear-budget",
+    "ClientSecret": "FffKqPOcupW47zGLmIX3V1lZiffNHt3J",
+    "TokenUrl": "http://localhost:8080/realms/customer/protocol/openid-connect/token"
   },
   "Cors": {
     "AllowedOrigins": [
