--- a/.github/workflows/transactions-service-unit-testing.yml
+++ b/.github/workflows/transactions-service-unit-testing.yml
@@ -19,17 +19,17 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Restore
-        run: dotnet restore ClearBudget.sln
+        run: dotnet restore src/Clear-Budget-API.sln
 
       - name: Build
-        run: dotnet build ClearBudget.sln --no-restore --configuration Release
+        run: dotnet build src/Clear-Budget-API.sln --no-restore --configuration Release
 
       - name: Run TransactionsService.Tests
-        run: dotnet test tests/TransactionsService.Tests/TransactionsService.Tests.csproj --no-build --configuration Release
+        run: dotnet test src/TransactionsService.Tests/TransactionsService.Tests.csproj --no-build --configuration Release
 
       - name: Run CategoryEventConsumerTest.Tests
-        run: dotnet test tests/TransactionsService.Tests/CategoryEventConsumerTest.Tests.csproj --no-build --configuration Release
+        run: dotnet test src/TransactionsService.Tests/CategoryEventConsumerTest.Tests.csproj --no-build --configuration Release
 
       - name: Run CategoryCacheTests.Tests
-        run: dotnet test tests/TransactionsService.Tests/CategoryCacheTests.Tests.csproj --no-build --configuration Release
+        run: dotnet test src/TransactionsService.Tests/CategoryCacheTests.Tests.csproj --no-build --configuration Release
 
