--- a/.github/workflows/transactions-service-integration-testing.yml
+++ b/.github/workflows/transactions-service-integration-testing.yml
@@ -25,10 +25,10 @@ jobs:
           docker info
 
       - name: 📦 Restore dependencies
-        run: dotnet restore src/Clear-Budget-API
+        run: dotnet restore src/Clear-Budget-API.sln
 
       - name: 🏗️ Build solution
-        run: dotnet build src/Clear-Budget-API --no-restore --configuration Release
+        run: dotnet build src/Clear-Budget-API.sln --no-restore --configuration Release
 
       - name: 🔍 List copied appsettings (debug)
         run: find . -name "appsettings*.json"
